test/tests/operators/from_amazon_sqs/validation/error_batch_size_zero.txt
error: invalid batch size: 0
 --> tests/operators/from_amazon_sqs/validation/error_batch_size_zero.tql:5:37
  |
5 | from_amazon_sqs "queue", batch_size=0
  |                                     ^ 
  |
  = hint: batch size must be in the interval [1, 10]
